--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "summer",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npx live-server"
+    "build": "tsc",
+    "start": "node dist/app.js"
   },
   "keywords": [],
   "author": "",
@@ -15,7 +16,6 @@
     "typescript": "^5.9.3"
   },
   "dependencies": {
-    "live-server": "^1.2.2",
-    "readline": "^1.3.0"
+    "live-server": "^1.2.2"
   }
 }
